Dodanie możliwości zgłaszania komentarza i posta użytkownika
