# yukka-ui/src/app/services/api.module.ts
@@ -15,7 +15,6 @@ import { DzialkaService } from './services/dzialka.service';
 import { AuthenticationService } from './services/authentication.service';
 import { PracownikService } from './services/pracownik.service';
 import { OgrodService } from './services/ogrod.service';
-import { SoilResourceService } from './services/soil-resource.service';
 
 /**
  * Module that provides all services and configuration.
@@ -36,7 +35,6 @@ import { SoilResourceService } from './services/soil-resource.service';
     AuthenticationService,
     PracownikService,
     OgrodService,
-    SoilResourceService,
     ApiConfiguration
   ],
 })
