# yukka-ui/src/app/services/models.ts
@@ -8,7 +8,6 @@ export type { DzialkaResponse } from './models/dzialka-response';
 export type { DzialkaRoslinaRequest } from './models/dzialka-roslina-request';
 export type { EmailRequest } from './models/email-request';
 export type { FileResponse } from './models/file-response';
-export type { Gleba } from './models/gleba';
 export type { GrantedAuthority } from './models/granted-authority';
 export type { HasloRequest } from './models/haslo-request';
 export type { Komentarz } from './models/komentarz';
@@ -34,7 +33,6 @@ export type { PowiadomienieDto } from './models/powiadomienie-dto';
 export type { PowiadomienieResponse } from './models/powiadomienie-response';
 export type { Pozycja } from './models/pozycja';
 export type { RegistrationRequest } from './models/registration-request';
-export type { Roslina } from './models/roslina';
 export type { RoslinaRequest } from './models/roslina-request';
 export type { RoslinaResponse } from './models/roslina-response';
 export type { RozmowaPrywatna } from './models/rozmowa-prywatna';
@@ -44,7 +42,6 @@ export type { UstawieniaRequest } from './models/ustawienia-request';
 export type { Uzytkownik } from './models/uzytkownik';
 export type { UzytkownikResponse } from './models/uzytkownik-response';
 export type { UzytkownikRoslinaRequest } from './models/uzytkownik-roslina-request';
-export type { Wlasciwosc } from './models/wlasciwosc';
 export type { WlasciwoscResponse } from './models/wlasciwosc-response';
 export type { WlasciwoscWithRelations } from './models/wlasciwosc-with-relations';
 export type { ZasadzonaRoslinaResponse } from './models/zasadzona-roslina-response';
