# yukka-ui/src/app/services/models/wlasciwosc.ts
@@ -1,6 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface Wlasciwosc {
-  labels?: string;
-  nazwa?: string;
-}
