# yukka-ui/src/app/services/models/zgloszenie-request.ts
@@ -1,6 +1,8 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface ZgloszenieRequest {
+  odnosnik: string;
   opis: string;
+  typPowiadomienia: string;
   zglaszany: string;
 }
