# yukka-ui/src/openApi/openApi.json
@@ -2064,29 +2064,6 @@
         }
       }
     },
-    "/rest/neo4j/gleba": {
-      "get": {
-        "tags": [
-          "soil-resource"
-        ],
-        "operationId": "getAllSoils",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Gleba"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/powiadomienia": {
       "get": {
         "tags": [
@@ -3117,23 +3094,23 @@
           "name": {
             "type": "string"
           },
-          "authorities": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GrantedAuthority"
-            }
-          },
           "normalUzytkownik": {
-            "type": "boolean"
-          },
-          "pracownik": {
             "type": "boolean"
           },
           "admin": {
             "type": "boolean"
           },
+          "pracownik": {
+            "type": "boolean"
+          },
           "username": {
             "type": "string"
+          },
+          "authorities": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/GrantedAuthority"
+            }
           },
           "password": {
             "type": "string"
@@ -3141,13 +3118,13 @@
           "enabled": {
             "type": "boolean"
           },
+          "accountNonLocked": {
+            "type": "boolean"
+          },
           "credentialsNonExpired": {
             "type": "boolean"
           },
           "accountNonExpired": {
-            "type": "boolean"
-          },
-          "accountNonLocked": {
             "type": "boolean"
           }
         }
@@ -3735,7 +3712,9 @@
       },
       "ZgloszenieRequest": {
         "required": [
+          "odnosnik",
           "opis",
+          "typPowiadomienia",
           "zglaszany"
         ],
         "type": "object",
@@ -3748,6 +3727,12 @@
           "opis": {
             "maxLength": 200,
             "minLength": 0,
+            "type": "string"
+          },
+          "typPowiadomienia": {
+            "type": "string"
+          },
+          "odnosnik": {
             "type": "string"
           }
         }
@@ -4236,11 +4221,11 @@
             "type": "integer",
             "format": "int32"
           },
-          "ynowy": {
+          "xnowy": {
             "type": "integer",
             "format": "int32"
           },
-          "xnowy": {
+          "ynowy": {
             "type": "integer",
             "format": "int32"
           }
@@ -4300,202 +4285,6 @@
             "items": {
               "type": "string"
             }
-          }
-        }
-      },
-      "Gleba": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "nazwa": {
-            "type": "string"
-          },
-          "rosliny": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Roslina"
-            }
-          }
-        }
-      },
-      "Roslina": {
-        "type": "object",
-        "properties": {
-          "labels": {
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "roslinaId": {
-            "type": "string"
-          },
-          "nazwa": {
-            "type": "string"
-          },
-          "nazwaLacinska": {
-            "type": "string"
-          },
-          "opis": {
-            "type": "string"
-          },
-          "wysokoscMin": {
-            "type": "number",
-            "format": "double"
-          },
-          "wysokoscMax": {
-            "type": "number",
-            "format": "double"
-          },
-          "obraz": {
-            "type": "string"
-          },
-          "formy": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "gleby": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "grupy": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "koloryLisci": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "koloryKwiatow": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "kwiaty": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "odczyny": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "okresyKwitnienia": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "okresyOwocowania": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "owoce": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "podgrupa": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "pokroje": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "silyWzrostu": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "stanowiska": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "walory": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "wilgotnosci": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "zastosowania": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "zimozielonosci": {
-            "uniqueItems": true,
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Wlasciwosc"
-            }
-          },
-          "uzytkownikRoslina": {
-            "type": "boolean"
-          }
-        }
-      },
-      "Wlasciwosc": {
-        "type": "object",
-        "properties": {
-          "labels": {
-            "type": "string"
-          },
-          "nazwa": {
-            "type": "string"
           }
         }
       },
