# yukka/src/main/java/com/example/yukka/model/social/powiadomienie/TypPowiadomienia.java
@@ -10,16 +10,14 @@ public enum TypPowiadomienia {
     OWOCOWANIE_ROSLIN("Za {data} twoje rośliny {nazwyRoslin} zaczną owocować!"),
     OWOCOWANIE_ROSLIN_TERAZ("W aktualnym miesiącu twoje rośliny {nazwyRoslin} powinny owocować!"),
     KWITNIENIE_ROSLIN_TERAZ("W aktualnym miesiącu twoje rośliny {nazwyRoslin} powinny kwitnąć!"),
-    PODLEWANIE_ROSLIN("Za {data} powinieneś podlać następujące rośliny: {nazwyRoslin}"),
     USUNIECIE_KOMENTARZA("Usunięto twój komentarz pod postem {tytul}"),
     BAN("Zostałeś zbanowany aż do {okres} za {tytul}"),
     ODBANOWANIE("Twoje konto zostało odbanowane"),
-    OCENA_ROSLINY("Ktoś ocenił twoją roślinę {tytul} {odnosnik}"),
     USUNIECIE_ROSLINY("Twoja roślina została usunięta bo tak"),
     GRATULACJE("Gratulacje użytkowniku! Zyskałeś(aś) ponad {iloscPolubien} polubień!"),
-    ZGLOSZENIE("Użytkownik {uzytkownikNazwa} wysłał(a) zgłoszenie na użytkownika {zglaszany}: {tytul}"),
-    ZGLOSZENIE_POST("Użytkownik {uzytkownikNazwa} zgłosił(a) post użytkownika {zglaszany}: {tytul}"),
-    ZGLOSZENIE_KOMENTARZ("Użytkownik {uzytkownikNazwa} zgłosił(a) komentarz użytkownika {zglaszany} pod postem {tytul}"),
+    ZGLOSZENIE("{uzytkownikNazwa} wysłał(a) zgłoszenie na {zglaszany}: {tytul}"),
+    ZGLOSZENIE_POST("{uzytkownikNazwa} zgłosił(a) post {zglaszany} z powodu: {tytul}"),
+    ZGLOSZENIE_KOMENTARZ("{uzytkownikNazwa} zgłosił(a) komentarz {zglaszany} pod postem z powodu: {tytul}"),
     SPECJALNE("{tytul}");
 
     private final String template;
