# yukka/src/main/java/com/example/yukka/model/social/request/ZgloszenieRequest.java
@@ -1,5 +1,8 @@
 package com.example.yukka.model.social.request;
 
+import com.example.yukka.model.social.powiadomienie.TypPowiadomienia;
+import com.example.yukka.validations.valueOfEnum.ValueOfEnum;
+
 import jakarta.validation.constraints.NotEmpty;
 import jakarta.validation.constraints.Size;
 import lombok.AllArgsConstructor;
@@ -23,5 +26,12 @@ public class ZgloszenieRequest {
     @NotEmpty(message = "Podaj powód zgłoszenia")
     @Size(max = 200, message = "Zgłoszenie może mieć co najwyżej do 200 znaków")
     private String opis;
+
+    @NotEmpty(message = "Nie podano typu zgłoszenia")
+    @ValueOfEnum(enumClass = TypPowiadomienia.class, message = "Niepoprawny typ zgłoszenia")
+    private String typPowiadomienia;
+
+    @NotEmpty(message = "Nie podano odnośnika")
+    private String odnosnik;
 
 }
